# sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release_notes.md
.github/workflows/: publish.yml  test.yml
src/quanttape/: __init__.py  cli.py  output.py  rules.py  scanner.py
src/quanttape/proxy/: README.md  __init__.py  bridge.py  certs.py  enforcer.py  server.py
tests/: benchmark_proxy.py  test_cli.py  test_mitm_live.py  test_output.py  test_proxy.py  test_proxy_e2e.py  test_rules.py  test_sarif_snapshots.py  test_scanner.py
tests/fixtures/: trading_rule_hits.py  trading_rule_suppressed.py
tests/snapshots/: trading_rule_hits.sarif.json  trading_rule_suppressed.sarif.json
