[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanttape"
version = "0.0.16"
authors = [
    { name = "Quant Tape LLC", email = "info@quanttape.com" },
]
description = "Trading-aware local security scanner for bots, strategies, and execution code."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.8"
dependencies = ["pyyaml", "rich>=13.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["trading", "security", "algorithmic-trading", "sdk", "cybersecurity", "quant", "kill-switch"]

[project.optional-dependencies]
git = ["gitpython"]

[project.scripts]
quanttape = "quanttape.cli:main"

[project.urls]
"Homepage" = "https://quanttape.com"
"Repository" = "https://github.com/quanttape/sdk"
"Issues" = "https://github.com/quanttape/sdk/issues"

