[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanttape"
version = "0.0.20"
authors = [
    { name = "Quant Tape LLC", email = "info@quanttape.com" },
]
description = "Local-first security scanner and egress proxy for trading bots and AI agents."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.8"
dependencies = ["pyyaml", "rich>=13.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["trading", "security", "algorithmic-trading", "sdk", "cybersecurity", "quant", "kill-switch", "ai-agent", "egress-proxy", "dlp"]

[project.optional-dependencies]
git = ["gitpython"]
guard = ["httpx>=0.24.0", "cryptography>=41.0.0"]

[project.scripts]
quanttape = "quanttape.cli:main"

[project.urls]
"Homepage" = "https://quanttape.com"
"Repository" = "https://github.com/quanttape/sdk"
"Issues" = "https://github.com/quanttape/sdk/issues"

